ТЗ №15: Разработан функционал по бронированию вещей (add-bookings)